# CubicalRipser_3dim

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CubicalRipser.sln  CubicalRipser.vcxproj  CubicalRipser.vcxproj.filters  CubicalRipser_3dim.sln  CubicalRipser_3dim.vcxproj  CubicalRipser_3dim.vcxproj.filters  MANIFEST.in  Makefile  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  array_index.cpp  array_index.h  birthday_index.cpp  birthday_index.h  cmake_install.cmake  coboundary_enumerator.cpp  coboundary_enumerator.h  columns_to_reduce.cpp  columns_to_reduce.h  compute_pairs.cpp  compute_pairs.h  config.h  cripser.sln  cripser.vcxproj  cripser.vcxproj.filters  cube.cpp  cube.h  cubicalripser.cpp  cubicalripser.vcxproj  cubicalripser_3dim.cpp  cubicalripser_pybind.cpp  dense_cubical_grids.cpp  dense_cubical_grids.h  joint_pairs.cpp  joint_pairs.h  (+23 more)
.github/: test  workflows
.github/workflows/: build.yml  compile_upload.yml
CubicalRipser/CubicalRipser.xcodeproj/: project.pbxproj
CubicalRipser/CubicalRipser.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CubicalRipser/CubicalRipser.xcodeproj/project.xcworkspace/xcuserdata/kaji.xcuserdatad/: UserInterfaceState.xcuserstate
CubicalRipser/CubicalRipser.xcodeproj/xcuserdata/kaji.xcuserdatad/xcschemes/: xcschememanagement.plist
cripser/: __init__.py  utils.py
cripser.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cripser_test.egg-info/: PKG-INFO  SOURCES.txt
dat/: 3dimsamplez.txt
demo/: 1dimsample.txt  2d.csv  3dimsamplez.txt  cr.py  cubicalripser  cubicalripser.ipynb  dim2.npy  dipha2npy.py  img2npy.py  npy2vtk.py  stackPH.py
demo/.ipynb_checkpoints/: cubicalripser-checkpoint.ipynb
mac/: CR3  cubicalripser  t-cubicalripser  tcubicalripser
python/: CMakeLists.txt  coboundary_enumerator.cpp  compute_pairs.cpp  config.h  cubicalripser.cpp  cubicalripser_pybind.cpp  dense_cubical_grids.cpp  dense_cubical_grids.h  joint_pairs.h  setup.py  union_find.h  write_pairs.h
sample/: 2d_hole.npy  2dimsample.txt  3d_hole.npy  3ds.npy  4d-sphere.npy
src/: CubicalRipser.vcxproj.filters  Makefile  coboundary_enumerator.cpp  coboundary_enumerator.h  coboundary_enumerator_T.cpp  compute_pairs.cpp  compute_pairs.h  config.h  cube.cpp  cube.h  cubicalripser.cpp  cubicalripser_pybind.cpp  cubicalripser_pybind.h  cubicalripser_pybind_T.cpp  dense_cubical_grids.cpp  dense_cubical_grids.h  dense_cubical_grids_T.cpp  joint_pairs.cpp  joint_pairs.h  npy.hpp  union_find.h  write_pairs.h
tests/: conftest.py  test_2d_t_compute_pairs_vs_linkfind.py  test_3d_hole.py  test_4d_hole.py  test_4d_sphere.py  test_alexander.py  test_cli.py  test_compare_gudhi.py  test_mod.py  test_utils.py
win64/: cripser.cp37-win_amd64.pyd  cripser.cp38-win_amd64.pyd  tcripser.cp37-win_amd64.pyd  tcripser.cp38-win_amd64.pyd
