[project]
name = "cripser"
version = "0.0.14"
description = "Cubical Ripser Python binding"
license = { file = "LICENSE" }
urls = { "Homepage" = "https://github.com/shizuo-kaji/CubicalRipser_3dim" } 
keywords = ["persistent homology", "TDA", "cubical complex"]
readme = "README.md"
authors = [
    { name = "Shizuo Kaji", email = "shizuo.kaji@gmail.com"}
    ]
requires-python = ">=3.8"

[build-system]
requires = ["scikit-build>=0.13", "cmake>=3.15"]

[tool.cibuildwheel]
archs = "x86_64 arm64" # Build for both architectures

[tool.scikit-build]
wheel.expand-macos-universal-tags = true
minimum-version = "build-system.requires"
cmake.configure-args = [
    "-DCMAKE_CXX_STANDARD=14",
    "-DCMAKE_CXX_STANDARD_REQUIRED=ON",
    "-DCMAKE_CXX_FLAGS=-O3", # Or "-DCMAKE_CXX_FLAGS_RELEASE=-O3" for Release builds
    "-DCMAKE_POSITION_INDEPENDENT_CODE=ON"
]

