[project]
name = "cripser"
version = "0.0.21"
description = "Cubical Ripser Python binding"
license = { file = "LICENSE" }
urls = { "Homepage" = "https://github.com/shizuo-kaji/CubicalRipser_3dim" }
keywords = ["persistent homology", "TDA", "cubical complex", "image", "volume"]
readme = "README.md"
authors = [
    { name = "Shizuo Kaji", email = "shizuo.kaji@gmail.com"}
    ]
requires-python = ">=3.8"

[build-system]
# setuptools reads metadata from [project]; setup.py drives CMake directly.
requires = [
  "setuptools>=68",
  "wheel",
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
archs = "x86_64 arm64" # Build for both architectures

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
namespaces = true
include = ["cripser*"]
